--- a/content/modules/ROOT/pages/chapter02.adoc
+++ b/content/modules/ROOT/pages/chapter02.adoc
@@ -51,7 +51,7 @@ In the wake of the sophisticated ransomware attack that exploited vulnerabilitie
 ** A new software template *Secured Quarkus Service Software Supply Chain* with an option called *Verify Commits* that should be enabled to verify signatures on all commits.
 ** A pop-up window from link:glossary.html#sigstore[*Sigstore*,window=_blank] in your *Dev Spaces* workspace requesting your credentials when commiting your code.
 * *Developer*: "Yes! Does this mean my code commits are being signed with my credentials?"
-* "Correct," you confirm as you open a terminal within your Dev Spaces workspace and run the following command to show *GitSign* configuration: *git config --global --list*
+* "Correct," you confirm as you open a terminal within your *Dev Spaces* workspace and run the following command to show *GitSign* configuration: *git config --global --list*
 
 NOTE: You will be asked to run this command later on in this lab.
 
@@ -144,6 +144,8 @@ image::78_Initialize_Cosign.png[]
 * "Ah, yes. I remember you struggled quiet a bit with the link:https://en.wikipedia.org/wiki/Log4Shell[*Log4Shell*,window=_blank] vulnerability a few years back."
 * "We'll include steps in the pipeline to perform both image scans and image checks against known CVEs and your organization's policies. This way, we ensure that the images are clear of known vulnerabilities and that our policies are enforced during the build and deploy stages," you answer.
 * "In fact, let me login into link:glossary.html#acs[*Red Hat Advanced Cluster Security (ACS)*,window=_blank] now and show what those policies look like," you say as you open the {qa_cluster_acs_route}[RH ACS Console,window=_blank] and log in with your credentials username: {qa_cluster_acs_portal_username} and password: {qa_cluster_acs_portal_password}
+
+NOTE: The browser will warn you of a certificate issue when you first access the RHACS console.  Ignore this warning and continue to the site.
 
 image::80_rhacs_login.png[]
 
