--- a/content/modules/ROOT/pages/chapter03.adoc
+++ b/content/modules/ROOT/pages/chapter03.adoc
@@ -221,7 +221,7 @@ image::66_SBOM.png[]
 image::65_Upload_SBOM_TPA_Task.png[]
 
 
-* In this step, the SBOM is uploaded to Trusted Profile Analyzer.  We do this to turn the raw SBOM into actionalble information.  For example, TPA can identify dependencies in your image that are targets of known Common Vulnerabilities and Exploits (CVEs).  These CVE's can be viewed on the Trusted Profile Analyzer console for the specific SBOM uploaded.
+* In this step, the SBOM is uploaded to Trusted Profile Analyzer.  We do this to turn the raw SBOM into actionable information.  For example, TPA can identify dependencies in your image that are targets of known Common Vulnerabilities and Exploits (CVEs).  These CVE's can be viewed on the Trusted Profile Analyzer console for the specific SBOM uploaded.
 
 === Demonstrating the Secure Deploy Process
 
