--- a/content/modules/ROOT/pages/chapter01.adoc
+++ b/content/modules/ROOT/pages/chapter01.adoc
@@ -162,7 +162,7 @@ image::21_Modify_ExampleResourceTest.png[]
 image::22_Index_File.png[]
 
 * Having completed your task, you're ready to commit your changes.
-* You click on the *Source Control* icon located in the left menu.
+* You click on the *Source Control* icon located in the left menu.  You may or may not be prompted to trust your workspace again.  Go ahead and follow the prompts to trust the workspace if required.
 * Then, you enter the commit message "My First Commit" and click on the *Commit* button to finalize your changes.
 
 image::23_My_First_Commit.png[]
