--- a/content/modules/ROOT/pages/glossary.adoc
+++ b/content/modules/ROOT/pages/glossary.adoc
@@ -4,7 +4,7 @@
 * *OpenShift Container Platform (OCP)*: Is a container orchestration platform based on Kubernetes that provides a robust environment for developing, deploying, and managing containerized applications. All the workshop components you are using today are running on *OpenShift*. To learn more about *OpenShift* follow this link: https://www.redhat.com/en/technologies/cloud-computing/openshift/container-platform.
 
 [id='gpt']
-* *Golden Path Template (GPT)*: Is a pre-configured template that provides a standardized approach to common development tasks within an organization. GPTs help developers create new components with ease, in an automated and self-service manner, while ensuring compliance with organizational policies and best practices. For a more in-depth explanation, check out the blog Raffaele Spazzoli: https://www.redhat.com/en/blog/designing-golden-paths.
+* *Software Template*: Is a pre-configured template that provides a standardized approach to common development tasks within an organization. Software Templates help developers create new components with ease, in an automated and self-service manner, while ensuring compliance with organizational policies and best practices. For a more in-depth explanation, check out the blog Raffaele Spazzoli: https://www.redhat.com/en/blog/designing-golden-paths.
 
 [id='idp']
 * *Internal Developer Portal (IDP)*: Is a centralized platform within a company that provides developers with tools, resources, and information they need to build and deploy applications. Think of it as a one-stop shop for internal developers, streamlining access to APIs, documentation, and development environments. You can further learn about IDPs through this URL: https://internaldeveloperplatform.org/what-is-an-internal-developer-platform/.
